make sure lesson name becomes ellipsis when it is too long to fit

--- a/services/QuillLMS/app/assets/stylesheets/pages/dashboard.scss
+++ b/services/QuillLMS/app/assets/stylesheets/pages/dashboard.scss
@@ -433,6 +433,10 @@
     height: 52px;
     .lesson-name {
       cursor: pointer;
+      width: 410px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 }
